Update src/main/java/org/example/dao/RegistryRepository.java
Co-authored-by: Alexander Singeev <singeev@icloud.com>